fixed chat scrollbar

--- a/front_end/experimental/assets/css/style.css
+++ b/front_end/experimental/assets/css/style.css
@@ -155,18 +155,18 @@ Input bar from bellow
     Scroll atributes
 */
     
-    .chat__content::-webkit-scrollbar {
+    #chat__content::-webkit-scrollbar {
         width: 10px;
     }
     
-    .chat__content::-webkit-scrollbar-track {
+    #chat__content::-webkit-scrollbar-track {
         background: rgb(204, 200, 193);
     }
     
-    .chat__content::-webkit-scrollbar-thumb {
+    #chat__content::-webkit-scrollbar-thumb {
         background: #888;
     }
     
-    .chat__content::-webkit-scrollbar-thumb:hover {
+    #chat__content::-webkit-scrollbar-thumb:hover {
         background: #555;
     }
